# ai-app-template

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  structure.md
.github/workflows/: deploy.yml  test.yml  validation.yml
app/: main.py
app/api/: routes.py
app/core/: config.py  inference.py  pipeline.py
app/services/: cache.py  vector_db.py
app/ui/: interface.py
app/utils/: port_finder.py
tests/: test_api.py  test_inference.py  test_pipeline.py
