[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-app"
version = "0.1.0"
description = "AI Application Template"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "gradio",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "python-multipart",
    "pytest",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
data-processing = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]
ml-ai = [
    "torch>=2.5.0",
    "transformers>=4.50.0",
    "sentence-transformers>=3.0.0",
]
vector-db = [
    "pinecone-client>=5.0.0,<6.0",
    "weaviate-client>=4.10.0",
    "chromadb>=1.0.0",
]
caching = [
    "redis>=5.2.0",
    "python-memcached>=1.62",
]
dev = [
    "black>=24.8.0",
    "flake8>=7.1.0",
    "mypy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-app"
Repository = "https://github.com/yourusername/ai-app.git"
Issues = "https://github.com/yourusername/ai-app/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 110
target-version = ['py310', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "@abstract",
]